--- a/devsSuperPoderosas/index.html
+++ b/devsSuperPoderosas/index.html
@@ -29,6 +29,13 @@
 
   <section class="container">
 
+    <div class="container_aluna">
+      <a href="https://github.com/AlvesAline" target="_blank">
+        <img src="https://avatars.githubusercontent.com/u/79289949?s=400&u=587befdd0816b3537833627dae5cb73a5a0b6ac2&v=4" alt="Aline Alves"/>
+      </a>
+      <p>Sou a Aluna Alves</p>
+    </div>
+
 
   </section>
 
