adicionado o perfil da aluna

--- a/devsSuperPoderosas/index.html
+++ b/devsSuperPoderosas/index.html
@@ -33,7 +33,7 @@
       <a href="https://github.com/AlvesAline" target="_blank">
         <img src="https://avatars.githubusercontent.com/u/79289949?s=400&u=587befdd0816b3537833627dae5cb73a5a0b6ac2&v=4" alt="Aline Alves"/>
       </a>
-      <p>Sou a Aluna Alves</p>
+      <p>Sou a  aluna fofinhaaa Aluna Alves</p>
     </div>
 
 
